syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Server.gRPC.Controllers";

package project;

service Project {
	rpc CreateProject (addProjectParams) returns (addProjectResponse);
	rpc GetProjects (getProjectsParams) returns (projectResponse);
	rpc GetProjectsByVersion (getProjectsByVerisonParams) returns (projectResponse);
}

message addProjectParams {
	int32 project_id = 1;
	int32 order_id = 2;
	string name = 3;
	string description = 4;
	string manager = 5;
	string client = 6;
	string sector = 7;
}

message getProjectsParams {
	string search = 1;
}

message getProjectsByVerisonParams {
	int32 version_id = 1
}

message addProjectResponse {
	int32 project_id = 1;
}

message projectResponse {
	repeated projectObject projects = 1;
}

message projectObject {
	int32 project_id = 1;
	int32 order_id = 2;
	string name = 3;
	string description = 4;
	string manager = 5;
	string client = 6;
	string sector = 7;
	google.protobuf.Timestamp created_at = 8;
	google.protobuf.Timestamp updated_at = 9;
}